--- a/Planner/index.html
+++ b/Planner/index.html
@@ -35,6 +35,24 @@
     .dropdown-item{padding:12px 16px;cursor:pointer;display:flex;align-items:center;gap:10px;font-size:14px;color:#ccc;border-bottom:1px solid #222}
     .dropdown-item:last-child{border-bottom:none}
     .dropdown-item:hover{background:#222;color:#fff}
+    .help-fab{position:fixed;bottom:24px;right:24px;width:56px;height:56px;border-radius:28px;background:linear-gradient(135deg,#6366f1,#8b5cf6);border:none;color:#fff;font-size:24px;cursor:pointer;box-shadow:0 4px 20px rgba(99,102,241,0.4);z-index:900;display:flex;align-items:center;justify-content:center;transition:transform .2s}
+    .help-fab:hover{transform:scale(1.05);box-shadow:0 6px 28px rgba(99,102,241,0.5)}
+    .help-panel{position:fixed;bottom:24px;right:24px;width:380px;height:520px;background:#111;border:1px solid #333;border-radius:16px;z-index:1000;display:flex;flex-direction:column;box-shadow:0 8px 40px rgba(0,0,0,0.5)}
+    @media(max-width:480px){.help-panel{width:calc(100% - 32px);height:70vh;bottom:16px;right:16px}}
+    .help-header{padding:16px 20px;border-bottom:1px solid #222;display:flex;justify-content:space-between;align-items:center;background:linear-gradient(135deg,#1a1a2e,#151528);border-radius:16px 16px 0 0}
+    .help-messages{flex:1;overflow-y:auto;padding:16px}
+    .help-input{padding:16px;border-top:1px solid #222;display:flex;gap:8px}
+    .msg{margin-bottom:12px;max-width:85%}
+    .msg-user{margin-left:auto;background:#6366f1;color:#fff;padding:10px 14px;border-radius:12px 12px 4px 12px;font-size:14px}
+    .msg-bot{background:#1a1a1a;color:#ddd;padding:12px 14px;border-radius:12px 12px 12px 4px;font-size:14px;line-height:1.5}
+    .quick-btns{display:flex;flex-wrap:wrap;gap:6px;margin-bottom:12px}
+    .quick-btn{padding:8px 12px;background:#222;border:1px solid #333;border-radius:8px;color:#ccc;font-size:12px;cursor:pointer}
+    .quick-btn:hover{background:#333;color:#fff}
+    .typing{display:flex;gap:4px;padding:10px 14px}
+    .typing span{width:8px;height:8px;background:#666;border-radius:4px;animation:bounce .6s infinite}
+    .typing span:nth-child(2){animation-delay:.1s}
+    .typing span:nth-child(3){animation-delay:.2s}
+    @keyframes bounce{0%,100%{transform:translateY(0)}50%{transform:translateY(-4px)}}
   </style>
 </head>
 <body>
@@ -57,6 +75,108 @@ const cHrs=r=>r.duration_periods*HPM*r.quantity*(r.allocation/100);
 const useWin=()=>{const[w,sW]=React.useState(window.innerWidth);React.useEffect(()=>{const h=()=>sW(window.innerWidth);window.addEventListener('resize',h);return()=>window.removeEventListener('resize',h)},[]);return{w,mob:w<768,tab:w>=768&&w<1024}};
 
 const SLIDES=[{icon:'👋',title:'Welcome to Portfolio Planner',desc:'Plan resources, track costs, and manage your entire project portfolio in one place.'},{icon:'📁',title:'Create Projects',desc:'Click "+ New Project" to get started. Each project has its own timeline, resources, and budget.'},{icon:'👥',title:'Add Resources',desc:'Add team members to the timeline. Drag to move, drag edges to resize. Double-click to edit.'},{icon:'💰',title:'Track Costs',desc:'Switch to Budget view to add vendors and other costs. Everything is categorized as CAPEX or OPEX.'},{icon:'🤝',title:'Team Collaboration',desc:'Click "Team" to invite colleagues. They can view or edit based on their role.'},{icon:'📊',title:'Reports',desc:'Click "Report" for budget summaries and CSV export.'}];
+
+const HELP_SYSTEM=`You are a helpful assistant for Portfolio Planner, a project resource planning tool. Help users understand how to use the app. Be concise and friendly.
+
+KEY FEATURES:
+- Projects: Create multiple projects with timelines and budgets
+- Resources: Team members (FTE/Consultants) on a draggable timeline
+- Budget View: FTE Labor, Consultants, Vendors, Other Costs
+- Portfolio View: See all projects combined
+- Team: Invite colleagues (Admin/Member/Viewer roles)
+- Reports: Budget summary with CSV export
+
+TERMINOLOGY:
+- CAPEX: One-time costs (software, hardware, implementation)
+- OPEX: Ongoing costs (cloud hosting, maintenance)
+- FTE: Full-time employee (internal staff)
+- Consultant: External contractor
+- Allocation: % of time dedicated (25/50/75/100%)
+
+COMMON TASKS:
+
+Create a project:
+1. Click "+ New Project"
+2. Enter name, select fiscal year
+3. Click Create
+
+Add a resource:
+1. Select a project (not Portfolio)
+2. Click blue "+ Add Resource"
+3. Fill in type, name, rate, duration
+4. Choose FTE or Consultant
+5. Select CAPEX or OPEX
+6. Click Add
+
+Move/resize resources:
+- Drag bar left/right to move
+- Drag left edge to change start
+- Drag right edge to change duration
+- Double-click to edit
+
+Add vendors/costs:
+1. Click "Budget" view
+2. Go to Vendors or Other Costs
+3. Click "+ Add"
+4. Fill details and save
+
+Invite team:
+1. Click "Team" in header
+2. Enter email, select role
+3. Click Invite
+
+Run report:
+1. Click "Report"
+2. View summary
+3. Click "Export CSV"
+
+Change org settings:
+1. Click profile avatar (top right)
+2. Settings > Organization
+3. Update name/logo
+4. Save
+
+Always ask what they're trying to accomplish if unclear.`;
+
+const HelpAssistant=({context})=>{
+  const[open,setOpen]=React.useState(false);
+  const[msgs,setMsgs]=React.useState([{role:'assistant',content:"Hi! I'm your Portfolio Planner assistant. What would you like help with?"}]);
+  const[input,setInput]=React.useState('');
+  const[loading,setLoading]=React.useState(false);
+  const msgRef=React.useRef(null);
+  React.useEffect(()=>{if(msgRef.current)msgRef.current.scrollTop=msgRef.current.scrollHeight},[msgs]);
+  const send=async(text)=>{
+    const q=text||input.trim();if(!q||loading)return;
+    setInput('');
+    const newMsgs=[...msgs,{role:'user',content:q}];
+    setMsgs(newMsgs);setLoading(true);
+    try{
+      const res=await fetch('https://api.anthropic.com/v1/messages',{
+        method:'POST',
+        headers:{'Content-Type':'application/json','anthropic-dangerous-direct-browser-access':'true'},
+        body:JSON.stringify({model:'claude-sonnet-4-20250514',max_tokens:1024,system:HELP_SYSTEM+`\n\nContext: User is on ${context.view} view. ${context.hasProjects?'Has projects.':'No projects yet.'} ${context.projectName?'Current: '+context.projectName:''}`,messages:newMsgs.map(m=>({role:m.role,content:m.content}))})
+      });
+      const data=await res.json();
+      const reply=data.content?.[0]?.text||"Sorry, please try again.";
+      setMsgs(prev=>[...prev,{role:'assistant',content:reply}]);
+    }catch(e){setMsgs(prev=>[...prev,{role:'assistant',content:"Connection error. Please try again."}])}
+    setLoading(false);
+  };
+  const quickQs=["How do I create a project?","How do I add resources?","What's CAPEX vs OPEX?","How do I invite team members?"];
+  if(!open)return<button className="help-fab" onClick={()=>setOpen(true)} title="Need help?">💬</button>;
+  return<div className="help-panel">
+    <div className="help-header"><div style={{display:'flex',alignItems:'center',gap:10}}><span style={{fontSize:20}}>🤖</span><div><div style={{fontWeight:600,fontSize:14}}>Help Assistant</div><div style={{fontSize:11,color:'#888'}}>Ask me anything</div></div></div><button onClick={()=>setOpen(false)} style={{background:'none',border:'none',color:'#888',fontSize:20,cursor:'pointer'}}>×</button></div>
+    <div className="help-messages" ref={msgRef}>
+      {msgs.length===1&&<div className="quick-btns">{quickQs.map((q,i)=><button key={i} className="quick-btn" onClick={()=>send(q)}>{q}</button>)}</div>}
+      {msgs.map((m,i)=><div key={i} className={`msg ${m.role==='user'?'msg-user':'msg-bot'}`}>{m.content}</div>)}
+      {loading&&<div className="msg msg-bot"><div className="typing"><span/><span/><span/></div></div>}
+    </div>
+    <div className="help-input">
+      <input value={input} onChange={e=>setInput(e.target.value)} onKeyDown={e=>e.key==='Enter'&&send()} placeholder="Ask a question..." style={{flex:1,padding:'10px 14px',background:'#1a1a1a',border:'1px solid #333',borderRadius:8,color:'#fff',fontSize:14}}/>
+      <button onClick={()=>send()} disabled={loading||!input.trim()} style={{padding:'10px 16px',background:'#6366f1',border:'none',borderRadius:8,color:'#fff',fontWeight:600,cursor:'pointer',opacity:loading||!input.trim()?0.5:1}}>Send</button>
+    </div>
+  </div>;
+};
 
 const AuthCtx=React.createContext(null);
 const AuthProvider=({children})=>{
@@ -126,7 +246,7 @@ const useTeam=(orgId)=>{
   return{members,invites,invite,cancelInvite,removeMember,refresh:fetch};
 };
 
-const Modal=({open,onClose,title,children,wide})=>{const mouseDownTarget=React.useRef(null);if(!open)return null;return<div style={{position:'fixed',inset:0,background:'rgba(0,0,0,.9)',display:'flex',alignItems:'center',justifyContent:'center',zIndex:1000,padding:16}} onMouseDown={e=>{mouseDownTarget.current=e.target}} onClick={e=>{if(e.target===mouseDownTarget.current&&e.target===e.currentTarget)onClose()}}><div style={{background:C.card,border:`1px solid ${C.border}`,borderRadius:12,width:'100%',maxWidth:wide?700:500,maxHeight:'90vh',overflow:'auto'}} onClick={e=>e.stopPropagation()}><div style={{padding:'20px 24px',borderBottom:`1px solid ${C.border}`,display:'flex',justifyContent:'space-between',alignItems:'center'}}><h3 style={{margin:0,fontSize:18,fontWeight:600}}>{title}</h3><button onClick={onClose} style={{background:'transparent',border:'none',color:C.textS,fontSize:24,cursor:'pointer'}}>×</button></div><div style={{padding:24}}>{children}</div></div></div>};
+const Modal=({open,onClose,title,children,wide})=>{if(!open)return null;return<div style={{position:'fixed',inset:0,background:'rgba(0,0,0,.9)',display:'flex',alignItems:'center',justifyContent:'center',zIndex:1000,padding:16}} onClick={onClose}><div style={{background:C.card,border:`1px solid ${C.border}`,borderRadius:12,width:'100%',maxWidth:wide?700:500,maxHeight:'90vh',overflow:'auto'}} onClick={e=>e.stopPropagation()}><div style={{padding:'20px 24px',borderBottom:`1px solid ${C.border}`,display:'flex',justifyContent:'space-between',alignItems:'center'}}><h3 style={{margin:0,fontSize:18,fontWeight:600}}>{title}</h3><button onClick={onClose} style={{background:'transparent',border:'none',color:C.textS,fontSize:24,cursor:'pointer'}}>×</button></div><div style={{padding:24}}>{children}</div></div></div>};
 const Btn=({children,onClick,v='primary',disabled,style,...p})=>{const S={primary:{background:C.text,color:C.bg},secondary:{background:'transparent',color:C.text,border:`1px solid ${C.border}`},danger:{background:C.err,color:'#fff'},accent:{background:C.accent,color:'#fff'}};return<button onClick={onClick} disabled={disabled} style={{padding:'12px 24px',borderRadius:8,fontSize:14,fontWeight:600,cursor:disabled?'not-allowed':'pointer',opacity:disabled?.5:1,border:'none',...S[v],...style}} {...p}>{children}</button>};
 const Input=({label,...p})=><div style={{marginBottom:16}}>{label&&<label style={{fontSize:12,color:C.textS,marginBottom:6,display:'block',textTransform:'uppercase',letterSpacing:.5}}>{label}</label>}<input {...p} style={{width:'100%',padding:12,background:C.bg,border:`1px solid ${C.border}`,borderRadius:6,color:C.text,fontSize:14,...p.style}}/></div>;
 const Select=({label,children,...p})=><div style={{marginBottom:16}}>{label&&<label style={{fontSize:12,color:C.textS,marginBottom:6,display:'block',textTransform:'uppercase',letterSpacing:.5}}>{label}</label>}<select {...p} style={{width:'100%',padding:12,background:C.bg,border:`1px solid ${C.border}`,borderRadius:6,color:C.text,fontSize:14,...p.style}}>{children}</select></div>;
@@ -186,11 +306,13 @@ const MainApp=()=>{
   const startD=aP?.start_date?new Date(aP.start_date):new Date();
   const getD=i=>addM(startD,i);
   const allRes=showAll?projects.flatMap(p=>(p.resources||[]).map(r=>({...r,pCol:p.color}))):(aP?.resources||[]);
+  const helpContext={view:showAll?'Portfolio':view,hasProjects:projects.length>0,projectName:aP?.name||null};
   if(pL)return<div className="loading"><div className="spinner"/></div>;
 
   return<div style={{minHeight:'100vh',background:C.bg}}>
     {showTutorial&&<Tutorial onClose={closeTutorial}/>}
     <Settings open={modal==='settings'} onClose={()=>setModal(null)}/>
+    <HelpAssistant context={helpContext}/>
     <Modal open={!!delPid} onClose={()=>setDelPid(null)} title="Delete Project"><p style={{marginBottom:24,color:C.textS}}>Delete this project?</p><div style={{display:'flex',gap:12}}><Btn v="secondary" onClick={()=>setDelPid(null)} style={{flex:1}}>Cancel</Btn><Btn v="danger" onClick={doDelProj} disabled={saving} style={{flex:1}}>Delete</Btn></div></Modal>
     <Modal open={modal==='report'} onClose={()=>setModal(null)} title="Budget Report"><div style={{display:'grid',gridTemplateColumns:'1fr 1fr',gap:12,marginBottom:24}}>{[{l:'Total',v:T.tot,c:C.text},{l:'CAPEX',v:T.capex,c:C.capex},{l:'OPEX',v:T.opex,c:C.opex},{l:'Hours',v:`${(T.fteH+T.conH).toLocaleString()}h`,c:C.fte}].map((i,k)=><div key={k} style={{background:C.bg,padding:12,borderRadius:6}}><div style={{fontSize:11,color:C.textM}}>{i.l}</div><div style={{fontSize:18,fontWeight:600,color:i.c}}>{typeof i.v==='number'?fmt(i.v):i.v}</div></div>)}</div><Btn onClick={exportCSV} style={{width:'100%'}}>Export CSV</Btn></Modal>
     <Modal open={modal==='team'} onClose={()=>setModal(null)} title="Team" wide><div style={{marginBottom:24}}><h4 style={{fontSize:14,color:C.textM,marginBottom:12}}>INVITE</h4><p style={{fontSize:13,color:C.textS,marginBottom:12}}>Invite colleagues to collaborate.</p><div style={{display:'flex',gap:12,flexWrap:'wrap'}}><input type="email" value={invEmail} onChange={e=>setInvEmail(e.target.value)} placeholder="email" style={{flex:1,minWidth:200,padding:12,background:C.bg,border:`1px solid ${C.border}`,borderRadius:6,color:C.text}}/><select value={invRole} onChange={e=>setInvRole(e.target.value)} style={{padding:12,background:C.bg,border:`1px solid ${C.border}`,borderRadius:6,color:C.text}}><option value="member">Member</option><option value="admin">Admin</option><option value="viewer">Viewer</option></select><Btn onClick={doInvite} disabled={saving||!invEmail.trim()}>Invite</Btn></div></div>{invites.length>0&&<div style={{marginBottom:24}}><h4 style={{fontSize:14,color:C.textM,marginBottom:12}}>PENDING ({invites.length})</h4>{invites.map(inv=><div key={inv.id} style={{display:'flex',justifyContent:'space-between',padding:'12px 0',borderBottom:`1px solid ${C.border}`}}><span>{inv.email}</span><button onClick={()=>cancelInvite(inv.id)} style={{background:'none',border:'none',color:C.err,cursor:'pointer'}}>Cancel</button></div>)}</div>}<div><h4 style={{fontSize:14,color:C.textM,marginBottom:12}}>MEMBERS ({members.length})</h4>{members.map(m=><div key={m.user_id} style={{display:'flex',justifyContent:'space-between',padding:'12px 0',borderBottom:`1px solid ${C.border}`}}><span>{m.profiles?.full_name||m.profiles?.email}</span><span style={{fontSize:12,color:m.role==='owner'?C.ok:C.textS}}>{m.role}</span></div>)}</div></Modal>
@@ -200,12 +322,9 @@ const MainApp=()=>{
     <Modal open={modal==='addCost'} onClose={()=>{setModal(null);setEdit(null);setNCost(emptyCost)}} title={edit?'Edit Cost':'Add Cost'}><Select label="Category" value={nCost.category} onChange={e=>{const c=CCS.find(x=>x.id===e.target.value);setNCost({...nCost,category:e.target.value,cost_type:c?.ct||'opex',timing:c?.tm||'lump'})}}>{CCS.map(c=><option key={c.id} value={c.id}>{c.name}</option>)}</Select><Input label="Name" value={nCost.name} onChange={e=>setNCost({...nCost,name:e.target.value})}/><Input label="Vendor" value={nCost.vendor} onChange={e=>setNCost({...nCost,vendor:e.target.value})}/><div style={{display:'grid',gridTemplateColumns:'1fr 1fr',gap:12}}><Select label="Cost" value={nCost.cost_type} onChange={e=>setNCost({...nCost,cost_type:e.target.value})}><option value="capex">CAPEX</option><option value="opex">OPEX</option></Select><Select label="Timing" value={nCost.timing} onChange={e=>setNCost({...nCost,timing:e.target.value})}><option value="lump">Lump</option><option value="recurring">Recurring</option></Select></div>{nCost.timing==='recurring'?<div style={{display:'grid',gridTemplateColumns:'1fr 1fr 1fr',gap:12}}><Input label="Amt" type="number" value={nCost.amount} onChange={e=>setNCost({...nCost,amount:+e.target.value})}/><Select label="Freq" value={nCost.frequency} onChange={e=>setNCost({...nCost,frequency:e.target.value})}><option value="monthly">Mo</option><option value="quarterly">Qtr</option><option value="annual">Yr</option></Select><Input label="#" type="number" value={nCost.duration} onChange={e=>setNCost({...nCost,duration:+e.target.value})}/></div>:<Input label="Amount" type="number" value={nCost.amount} onChange={e=>setNCost({...nCost,amount:+e.target.value})}/>}<div style={{background:C.bg,padding:12,borderRadius:6,marginBottom:16,textAlign:'center'}}><span style={{color:C.textM}}>Total: </span><span style={{fontSize:18,fontWeight:600}}>{fmt(nCost.timing==='recurring'?nCost.amount*nCost.duration:nCost.amount)}</span></div><Btn onClick={doSaveCost} disabled={saving||!nCost.name.trim()} style={{width:'100%'}}>{edit?'Save':'Add'}</Btn></Modal>
 
     <nav style={{display:'flex',justifyContent:'space-between',alignItems:'center',padding:mob?'12px 16px':'16px 32px',borderBottom:`1px solid ${C.border}`,background:C.card}}>
-      <div style={{display:'flex',alignItems:'center',gap:16}}>
-        <span style={{fontSize:mob?16:18,fontWeight:600}}>Portfolio Planner</span>
-        {org&&<div style={{display:'flex',alignItems:'center',gap:10,padding:'8px 14px',background:C.bg,border:`1px solid ${C.border}`,borderRadius:8}}>
-          {org.logo_url&&<img src={org.logo_url} style={{height:28,borderRadius:4}} onError={e=>e.target.style.display='none'}/>}
-          <span style={{fontSize:14,fontWeight:500,color:C.text}}>{org.name}</span>
-        </div>}
+      <div style={{display:'flex',alignItems:'center',gap:12}}>
+        {org?.logo_url&&<img src={org.logo_url} style={{height:32,borderRadius:4}} onError={e=>e.target.style.display='none'}/>}
+        <div><span style={{fontSize:mob?16:18,fontWeight:600}}>Portfolio Planner</span>{!mob&&org&&<span style={{marginLeft:12,fontSize:15,fontWeight:500}}>{org.name}</span>}</div>
       </div>
       {mob?<button onClick={()=>setMobMenu(!mobMenu)} style={{background:'transparent',border:'none',color:C.text,fontSize:24,cursor:'pointer'}}>☰</button>:
       <div style={{display:'flex',alignItems:'center',gap:8}}>
